--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<nav>
 			<div class="row clearfix">
-				<img src="images/logo.png" class="logo">
+				<img src="logo.png" class="logo">
 
 				<ul class="main-nav animated slideInDown" id="check-class">
 					<li><a href="#">Home</a></li>
